--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -6,7 +6,7 @@
     background: $primary;
 
     @include media-breakpoint-up(md) {
-        background: transparent !important;
+        // background: transparent !important;
 
         .nav-link {
             text-shadow: 1px 1px 2px $dark;
@@ -49,7 +49,8 @@
         svg {
             display: inline-block;
             margin: 0 10px;
-            height: 30px;
+            width: 50px;
+	    height: 50px;
         }
     }
 
