--- a/layouts/blog/baseof.html
+++ b/layouts/blog/baseof.html
@@ -18,8 +18,9 @@
           </div>
           <main class="col-12 col-md-9 col-xl-8 pl-md-5 pr-md-4" role="main">
             {{ with .CurrentSection.OutputFormats.Get "rss" -}}
-            <a class="btn btn-lg -bg-orange td-rss-button d-none d-lg-block" href="{{ .Permalink | safeURL }}" target="_blank">
-              RSS <i class="fa fa-rss ml-2 "></i>
+
+            <a class="btn btn-lg td-rss-button d-none d-lg-block" href="{{ .Permalink | safeURL }}" target="_blank" >
+             <img src="http://www.runoob.com/images/rss.gif" width="36" height="14">
             </a>
             {{ end -}}
             {{ block "main" . }}{{ end }}
