--- a/layouts/blog/content.html
+++ b/layouts/blog/content.html
@@ -17,3 +17,14 @@
 
 	{{ partial "pager.html" . }}
 </div>
+
+{{- if .Site.Params.utter.repo -}}
+    <div id="utter-container"></div>
+    <script src="https://utteranc.es/client.js"
+        repo= '{{ .Site.Params.utter.repo }}'
+        issue-term= "{{ .Site.Params.utter.issueTerm }}"
+        theme= '{{ .Site.Params.utter.theme }}'
+        crossorigin= "anonymous"
+        async>
+    </script> 
+ {{- end }}
