--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -62,6 +62,10 @@
         @extend .td-max-width-on-larger-screens;
     }
 
+    .highlight {
+        margin-bottom: 0px;
+    }
+
     .alert:not(:first-child) {
         margin-top: 2 * $spacer;
         margin-bottom: 2 * $spacer;
